feat(mindmap): add mindmap export and desktop integration
- Add new dependencies for mindmap export and desktop integration
- Implement DownloadMindMapButton component with multiple export formats
- Add functionality to open mindmaps in Mind Elixir Desktop
- Update App component to support mindmap export and desktop integration

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.1.1",
+    "@mind-elixir/export-mindmap": "^0.0.3",
+    "@mind-elixir/open-desktop": "^0.0.1",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
