--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "epubjs": "^0.3.93",
+    "i18next": "^25.3.6",
+    "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.4.2",
     "jszip": "^3.10.1",
     "lucide-react": "^0.525.0",
@@ -59,6 +61,7 @@
     "react-day-picker": "^9.8.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
+    "react-i18next": "^15.6.1",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.3",
     "recharts": "2.15.4",
