--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.3",
     "recharts": "2.15.4",
+    "remark-cjk-friendly": "^1.2.1",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
