重构项目文件结构并优化AI连接测试
主要更改：
- 📁 整理根目录：将配置文件移动到config/文件夹，文档移动到docs/文件夹
- ⚙️ 更新构建脚本：调整package.json中的脚本路径以适应新结构
- 🔧 修复配置引用：更新TypeScript和Vite配置中的路径引用
- 🤖 优化AI连接测试：提高API测试的鲁棒性，支持多种响应格式
- 📝 更新项目文档：在README中添加新的项目结构说明
- 🐛 修复代理错误：解决https-proxy-agent在浏览器环境中的兼容性问题

技术改进：
- AI连接测试现在支持中英文多种成功响应模式
- 添加详细的调试日志便于问题排查
- 改进文本清理逻辑，保留中文字符
- 扩展成功模式列表，提高容错性

--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
+    "dev": "vite --config config/vite.config.ts",
+    "build": "tsc --project config/tsconfig.json && vite build --config config/vite.config.ts",
+    "lint": "eslint --config config/eslint.config.js .",
+    "preview": "vite preview --config config/vite.config.ts"
   },
   "dependencies": {
     "@google/generative-ai": "^0.24.1",
@@ -73,7 +73,9 @@
     "vaul": "^1.1.2",
     "xmldom": "^0.6.0",
     "zod": "^4.0.5",
-    "zustand": "^5.0.6"
+    "zustand": "^5.0.6",
+    "agent-base": "^7.1.4",
+    "https-proxy-agent": "^7.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
