修正包管理器配置并优化.gitignore
- 📦 修正为使用npm作为包管理器（而非pnpm）
- 🗑️ 删除pnpm-lock.yaml，保留package-lock.json
- 🗑️ 清理test目录中的测试执行文件
- 📝 完善.gitignore规则：
  - 保留npm的package-lock.json
  - 忽略yarn和pnpm的锁文件
  - 添加构建输出、临时文件等常见忽略规则

确保云端与本地文件结构完全一致，使用npm进行依赖管理

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,28 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
 dist
 dist-ssr
 *.local
+
+# Lock files (keep one package manager)
+# npm - we use npm
+# package-lock.json
+# yarn
+yarn.lock
+# pnpm
+pnpm-lock.yaml
+
+# Build outputs
+dist/
+build/
+*.tsbuildinfo
+
+# Environment variables
+.env.local
+.env.*.local
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +40,68 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# OS generated files
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# Test files
+test/*.cjs
+test/*.js
+!test/*.md
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
