tmp vs test files

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-﻿# AI Service Configuration
+# AI Service Configuration
 VITE_GEMINI_API_KEY=your_gemini_api_key_here
 VITE_GEMINI_MODEL=gemini-1.5-flash
 
@@ -11,3 +11,9 @@ VITE_GEMINI_MODEL=gemini-1.5-flash
 # VITE_OPENAI_API_KEY=your_openai_api_key_here
 # VITE_OPENAI_BASE_URL=https://api.openai.com/v1
 # VITE_OPENAI_MODEL=gpt-3.5-turbo
+
+# WebDAV Configuration (for testing)
+VITE_WEBDAV_URL=https://dav.jianguoyun.com/dav/
+VITE_WEBDAV_USERNAME=your_jianguoyun_email@example.com
+VITE_WEBDAV_PASSWORD=your_app_password_here
+VITE_WEBDAV_APP_NAME=fastReader_by_PF
