--- a/package.json
+++ b/package.json
@@ -43,12 +43,14 @@
     "@smoores/epub": "^0.1.9",
     "@ssshooter/epubjs": "^0.3.93",
     "@tailwindcss/vite": "^4.1.11",
+    "agent-base": "^7.1.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "epubjs": "^0.3.93",
+    "https-proxy-agent": "^7.0.6",
     "i18next": "^25.3.6",
     "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.4.2",
@@ -71,11 +73,10 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
     "vaul": "^1.1.2",
+    "webdav": "^5.8.0",
     "xmldom": "^0.6.0",
     "zod": "^4.0.5",
-    "zustand": "^5.0.6",
-    "agent-base": "^7.1.4",
-    "https-proxy-agent": "^7.0.6"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
@@ -84,6 +85,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
+    "dotenv": "^17.2.3",
     "eslint": "^9.30.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
