md_reader加入目录功能

--- a/src/services/prompts/config/v2-prompts.yaml
+++ b/src/services/prompts/config/v2-prompts.yaml
@@ -28,18 +28,18 @@ chapterSummary:
     ## 呈现形式和整体原则：
     - 输出结构：每个“语义段”的内容总结 * N个“语义段” + 全章内容总结 + 评价和反思
     - 语言：
-      - 简体中文为主语言，自然语言、书评风格输出。想象你是一个写书评的人，而非是一个做文字分析处理的人，你需要写出读者愿意看的流畅、连续二创文字而非死板的结构化信息。每段内容以100~800字长度为宜。
+      - 简体中文为主语言，自然语言、书评风格输出。想象你是一个写书评的人，而非是一个做文字分析处理的人，你需要写出读者愿意看的流畅、连续二创文字而非死板的结构化信息。
       - **专业性**：正式、忠实地表达原文意思
       - **信息密度至上**：简练，但是不损失原文逻辑，反而因为语言简练而更易于在逻辑和内容上有更多容量、不遗漏原文的关键逻辑和信息点
     - 只出核心内容，即无任何前缀或后缀文字。禁止的模式包括但不限于“好的...”、“这是...”、“这篇...”、“本章...”、“段落一”等等模型人格输出的解释词、问候语、谦词敬词等。
     - 如果内容是致谢、目录、前言、序言、作者或发言人姓名、版权声明或者图书信息等无实质故事内容的页面，直接回复"无需总结"
 
     ## 关键内容质量要求说明：
-    - 内容总结部分：
+    - 内容总结部分：总计以200~1000字长度为宜。
       - 呈现顺序：忠于原文组织顺序：按照文章的呈现顺序总结你的内容。虽然呈现顺序和你总结的逻辑顺序可能不同，但是也需尊重原文组织方式，如果你觉得必要可以在讲述的时候代入自己的逻辑理解。
       - 内容总结的基本单元“语义段”：相邻、内容相似、主旨高度相关的段落和内容，合并作为一个“语义段”进行总结处理。
       - 呈现内容为清晰的各个“语义段”总结，核心骨架是每个“语义段”的内容总结。如果段落总结内容比较充实或者难以理解、有进一步解释说明的必要，可在其中参杂2~10个必要的论据论证核心逻辑或者次要逻辑（非必须，可选）。所谓论据包括但不限于：原文、案例（需要描述清楚前因后果和情节）等等。
-    - 全章总结部分：
+    - 全章总结部分：总计以200~500字长度为宜。
       - 呈现内容为“总结+论述”模式，至少包含以下段落：
         - 总结全章内容：洞悉全文内容、逻辑组织脉络、作者用意，以极其深刻和富有逻辑但忠于原文的风格、以逻辑为上的思路，总结内容。
         - 评价和反思：对内容进行评价和反思，以精简为主，形成一段符合自然语言习惯、有逻辑、有深度、有递进的文字。涵盖方向包括但不限于：
@@ -50,8 +50,8 @@ chapterSummary:
 
     ## 输出格式：丰富格式、优化表达
     - markdown格式，请你积极地利用格式符号，帮助读者更快地理解你的输出内容。请你仔细学习格式示例用法，同样地，这些需要使用的格式符号的用法也使得你更清楚你需要努力提取这些信息：
-      - 不可使用：标题符号（`#`）、分割符号（`---`），会扰乱整体格式
-      - 可以使用、也应该多使用：
+      - **不可使用**：标题符号（`#`、`##`...）、分割符号（`---`），会扰乱整体格式
+      - **可以使用、也应该多使用**：
         - 加粗（`**`）：段落的主要关键论点或者逻辑点，比如基本可以总结全段内容的文字。
         - 下划线（`<u>`）：段落内的次要关键论点或者逻辑点，需要比普通内容更重视的内容，比如分论点、段内金句。
         - 引用（`>`）：需要单独起一行的原文、原话的引用。注意不需要再加引号。
