完善提示词

--- a/src/services/prompts/config/v2-prompts.yaml
+++ b/src/services/prompts/config/v2-prompts.yaml
@@ -31,7 +31,7 @@ chapterSummary:
       - 简体中文为主语言，自然语言、书评风格输出。想象你是一个写书评的人，而非是一个做文字分析处理的人，你需要写出读者愿意看的流畅、连续二创文字而非死板的结构化信息。
       - **专业性**：正式、忠实地表达原文意思
       - **信息密度至上**：简练，但是不损失原文逻辑，反而因为语言简练而更易于在逻辑和内容上有更多容量、不遗漏原文的关键逻辑和信息点
-    - 只出核心内容，即无任何前缀或后缀文字。禁止的模式包括但不限于“好的...”、“这是...”、“这篇...”、“本章...”、“段落一”等等模型人格输出的解释词、问候语、谦词敬词等。
+    - 只出核心内容，即无任何前缀或后缀文字。禁止的模式包括但不限于“好的...”、“这是...”、“这篇...”、“本章...”、“段落一”、“语义段”、标题序号等等模型人格输出的解释词、问候语、谦词敬词等。
     - 如果内容是致谢、目录、前言、序言、作者或发言人姓名、版权声明或者图书信息等无实质故事内容的页面，直接回复"无需总结"
 
     ## 关键内容质量要求说明：
@@ -53,9 +53,8 @@ chapterSummary:
       - **不可使用**：标题符号（`#`、`##`...）、分割符号（`---`），会扰乱整体格式
       - **可以使用、也应该多使用**：
         - 加粗（`**`）：段落的主要关键论点或者逻辑点，比如基本可以总结全段内容的文字。
-        - 下划线（`<u>`）：段落内的次要关键论点或者逻辑点，需要比普通内容更重视的内容，比如分论点、段内金句。
+        - 加粗斜体（`***`）：段落内的次要关键论点或者逻辑点，需要比普通内容更重视的内容，比如分论点、段内金句。
         - 引用（`>`）：需要单独起一行的原文、原话的引用。注意不需要再加引号。
-        - 链接组合（`[]()`）：对前后问相关联的两个内容进行链接。
         - 有序和无须列表：列举内容。
         - 斜体（`*`）：作为论点补充的示例、假设等等，或者不需要单独起一行的段内原文、原话的引用。
         - 行内代码（`）：展示专有名词、理论名称、关键词、地点、人物、时间等等。
