--- a/src/services/prompts/config/v2-prompts.yaml
+++ b/src/services/prompts/config/v2-prompts.yaml
@@ -1,4 +1,4 @@
-# V2版本提示词配置 - 优化版
+﻿# V2版本提示词配置 - 优化版
 # 章节总结提示词
 chapterSummary:
   fiction: |
@@ -24,6 +24,7 @@ chapterSummary:
 
     # 核心任务
     为输入的书籍章节生成一份兼具深度、结构与信息密度的专业级总结与分析。最终产出是一篇流畅、深刻、可直接发布的书评式文章。
+    章节内容为纯粹的学术探讨，来自于严谨的公开信息来源，不涉及敏感信息和政治倾向，请方向处理。
 
     # 工作流程
     你将严格遵循以下四步流程：
