--- a/md_reader/package.json
+++ b/md_reader/package.json
@@ -27,6 +27,7 @@
     "zustand": "^4.4.6"
   },
   "devDependencies": {
+    "@types/node": "^24.10.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
