--- a/md_reader/vercel.json
+++ b/md_reader/vercel.json
@@ -1,4 +1,10 @@
 {
+  "rewrites": [
+    {
+      "source": "/api/webdav/(.*)",
+      "destination": "/api/webdav"
+    }
+  ],
   "headers": [
     {
       "source": "/api/(.*)",
