--- a/src/services/prompts/config/v2-prompts.yaml
+++ b/src/services/prompts/config/v2-prompts.yaml
@@ -87,7 +87,7 @@ chapterSummary:
     - 目标：回答"本章的逻辑骨架是什么？它如何推进全书的论述？"
     - 方法：用高度凝练的语言，系统性地梳理各主要论点之间的关系
     - **关键**：不是重述内容，而是分析结构——区块之间的因果链、递进关系、对比逻辑
-    - 示例框架（仅显示思路，实际输出需要用自然语言组织）：[论点A]→[论点B]→[论点C]，[核心主张]。
+    - 示例框架（仅显示思路，实际输出需要用自然语言组织）：[论点A]，[论点B]，[论点C]，[核心主张]。
 
     **第二部分：评价、反思与启发性问题（150-400字）**
 
@@ -96,8 +96,8 @@ chapterSummary:
     1. **核心评价**（50-80字）：
       - 呈现你对章节内容的核心判断
       - 必须基于具体的文本证据或逻辑链条，而非笼统陈述
-      - 示例：✓ "[具体对比]展现了[现象]，揭示了[深层问题]"
-      - 反例：✗ "这一章很深刻，展现了人性的复杂性"
+      - 示例："[具体对比]展现了[现象]，揭示了[深层问题]"
+      - 反例："这一章很深刻，展现了人性的复杂性"
 
     2. **延伸思考**（80-150字）：
       - 结合你的知识储备，指出章节论点的：
