--- a/src/services/prompts/config/v2-prompts.yaml
+++ b/src/services/prompts/config/v2-prompts.yaml
@@ -71,7 +71,7 @@ chapterSummary:
     | `***加粗斜体***` | 该区块内部的因果转折或深层洞察 | 每个区块0-3处；必须重视论点的深度，而非重复 | ***成功的秘诀在于一致性执行，而非法则本身*** |
     | `*斜体*` | 具体案例、数字、原文短语、情景细节 | 可多次使用；用于补充说明和增加信息密度 | *1984年2月民用燃料油交易*、*获利78,000美元* |
     | `` `专有名词` `` | 系统性关键概念（仅在首次出现或特别强调时） | 每个区块最多3-5个；指系统/框架中的专有术语 | `N值（真实波动幅度均值）`、`唐奇安通道法` |
-    | `> 引用` | 需要独立成行的原文引用 | 仅用于特别有代表性的原文；不超过2-3句 | > 结果偏好效应（注意，该原文引用方式不需使用双引号，但是需单独成行） |
+    | `> 引用` | 需要独立成行的原文引用 | 仅用于特别有代表性的原文；完整句子；不超过2-3句（注意，该原文引用方式不需使用双引号，但是需单独成行） | > 结果偏好效应 |
 
     **禁止的标记用法**：
     - 不要对背景信息、人物特征、一般性描述使用加粗斜体
